# SEND

./: .dockerignore  .gitignore  compose.debug.yaml  compose.yaml  readme.md
backend/: Dockerfile  build.gradle
frontend/: .env  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/auth/: AuthContext.tsx  auth-context.ts  useAuth.ts
frontend/src/config/: sandboxConfig.ts
frontend/src/pages/: Landing.tsx  LecturePage.css  LecturePage.tsx  Library.tsx  PageShell.tsx  Sandbox.tsx
frontend/src/seo/: meta.ts
frontend/src/services/: api.ts  http.ts  lectureApi.ts
ocaml-engine/: README.md  dune-project
ocaml-engine/engine/: README.md  dune  engine.ml  engine.mli  engine_error.ml  engine_error.mli
ocaml-engine/engine/tests/: dune  engine_test.ml
ocaml-engine/execuctor/: dune  executor.ml  executor.mli
ocaml-engine/execuctor/nodes/: dune  fetch_company_profile.ml  fetch_financial_statements.ml  fetch_fundamentals.ml  fetch_price.ml  primitive_registry.ml  sub.ml  sub.mli
ocaml-engine/execuctor/tests/: dune  executor_test.ml
ocaml-engine/graph/: README.md  dune  edge.ml  edge.mli  graph.ml  graph.mli  graph_error.ml  graph_error.mli  graph_test.ml  node.ml  node.mli  node_instance.ml  node_instance.mli  port.ml  port.mli  utop_load.ml  value.ml  value.mli
ocaml-engine/graph/tests/: dune  graph_test.ml
ocaml-engine/market_data/: dune
ocaml-engine/nodes/: README.md  add_executor.ml  dune
ocaml-engine/spec/: README.md  dune  node_spec_decoder.ml  spec_error.ml  spec_error.mli
(+204 files in other folders)
